<resources>
    <string name="app_name">UDP test 2</string>
    <string name="send_message">Send Message</string>
    <string name="start_listening">Start Listening</string>
    <string name="stop_listening">Stop Listening</string>
    <string name="receive_in_hexadecimal">Receive in Hexadecimal</string>
    <string name="clear_console">Clear Console</string>
    <string name="console">Console</string>
    <string name="hello_world">Hello world!</string>
    <string name="message_to_send">Message to Send</string>
    <string name="multicast_ip_hint">Multicast IP</string>
    <string name="multicast_port_hint">Multicast Port</string>
</resources>
