<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="109dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="560dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/multicastIP"
                    android:layout_width="wrap_content"
                    android:layout_height="58dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/multicast_ip_hint"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/multicastPort"
                    android:layout_width="wrap_content"
                    android:layout_height="58dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/multicast_port_hint"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

            <Button
                android:id="@+id/startListeningButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onButton"
                android:text="@string/start_listening" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/console"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="282dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/consoleTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </ScrollView>

            <CheckBox
                android:id="@+id/hexDisplayCheckBox"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:text="@string/receive_in_hexadecimal" />

            <EditText
                android:id="@+id/messageToSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/message_to_send"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clearConsoleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:text="@string/clear_console"
                    android:onClick="onButton"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:enabled="false"
                    android:id="@+id/sendMessageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onButton"
                    android:text="@string/send_message" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>